# ai-review-analysis-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: analyze_reviews.py  database.py  exports.py  filters.py  llm_client.py  load_results.py  load_reviews.py  priority.py  prompts.py  report.py  run_batch.py  schema.py  visualize.py
data/input/: reviews.csv
data/output/: results.csv  top_urgent.csv
